background colour for nav on mobile and tablet fixed

--- a/static/css/nav.css
+++ b/static/css/nav.css
@@ -26,3 +26,12 @@
     transition:0.75s ease;
 }
 
+
+@media (max-width: 991px) {
+
+.bg-dark {
+    background:#12192c !important ;
+}
+
+
+}
